# SectorFlux

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE-COMMERCIAL  LICENSING.md  README.md
.github/workflows/: release.yml
public/: api.js  app.js  index.html  style.css
scripts/: embed_ui.py
src/: config.hpp  database.cpp  database.hpp  main.cpp  proxy.cpp  proxy.hpp  version.hpp.in
